# CompilerGym

./: .buildinfo  CMakeLists.txt  INSTALL.md  Makefile  about.html  changelog.html  cli.html  contributing.html  environment.yml  faq.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  requirements.txt  rpc.html  search.html  searchindex.js  setup.py
_modules/: index.html
_modules/compiler_gym/envs/: compiler_env.html
_modules/compiler_gym/envs/gcc/: gcc_env.html
_modules/compiler_gym/envs/llvm/: llvm_benchmark.html
_modules/compiler_gym/envs/llvm/datasets/: cbench.html
_modules/compiler_gym/service/: connection.html
_modules/compiler_gym/spaces/: named_discrete.html  reward.html
_modules/compiler_gym/views/: observation.html  observation_space_spec.html
_modules/compiler_gym/wrappers/: commandline.html  core.html  llvm.html  time_limit.html
_sources/: index.rst.txt
_sources/tutorial/: cgo22.rst.txt
benchmarks/: bench_test.py
build_tools/llvm/: config.py  extract_passes_from_sources.py  filter_passes.py  make_action_space_sources.py
build_tools/llvm/legacy_pass_manager/: extract_passes_from_sources.py  filter_passes.py  llvm_pass.py  load_config.py  make_action_space.sh  make_action_space_sources.py
build_tools/llvm/new_pass_manager/: config.py  extract_passes_from_sources.py  make_action_space.sh  make_action_space_sources.py
cc/compiler_gym/: service.html  util.html
cc/compiler_gym/envs/llvm/: service.html
cc/compiler_gym/service/: runtime.html
compiler_gym/: CMakeLists.txt  compiler_gym.html  datasets.html  envs.html  leaderboard.html  requirements_build.txt  service.html  spaces.html  views.html  wrappers.html
compiler_gym/envs/: compiler_env.py  gcc.html
compiler_gym/envs/llvm/: BUILD  CMakeLists.txt  __init__.py  llvm_benchmark.py  make_specs.py  specs.py
compiler_gym/envs/llvm/service/: ActionSpace.h  ApplyAction.cc  ApplyAction.h  BUILD  Benchmark.cc  CMakeLists.txt  Cost.cc  LlvmService.cc  LlvmService.h  LlvmSession.cc  LlvmSession.h  Observation.cc  ObservationSpaces.cc  ObservationSpaces.h  RunService.cc
compiler_gym/envs/llvm/service/passes/: BUILD  CMakeLists.txt  config.py  extract_passes_from_llvm_source_tree.py
compiler_gym/envs/llvm/service/passes/13.0.1/: ActionEnum.h  ActionEnums.h  (+13 more)
compiler_gym/envs/mlir/service/: ActionSpace.h  Benchmark.h  BenchmarkFactory.h  MlirSession.h  MlirUtils.h  Observation.h  ObservationSpaces.h  RunService.cc
compiler_gym/service/: BUILD  CompilationService.cc  CompilationService.h  connection.py  runtime.html
compiler_gym/service/proto/: BUILD  BenchmarkBroker.proto  compiler_gym_service.proto  py_converters.py
compiler_gym/service/runtime/: BUILD  BenchmarkBroker.cc  CreateAndRunCompilerGymServiceImpl.cc  CreateAndRunCompilerGymServiceImpl.h  Runtime.h
docs/source/cc/compiler_gym/service/: runtime.rst
envs/: gcc.html  loop_tool.html
examples/: RandomSearch.cc  op_benchmarks.py
examples/example_compiler_gym_service/service_cc/: ExampleService.cc
examples/example_unrolling_service/loop_unroller/: CMakeLists.txt
llvm/: api.html  index.html
native/: CMakeLists.txt
native/cmake/: boost.cmake  cpuinfo.cmake  fmt.cmake  grpc.cmake  llvm.cmake  magic_enum.cmake  nlohmann_json.cmake
native/include/compiler_gym/llvm/: ActionSpace.h  Benchmark.h  BenchmarkDynamicConfig.h  BenchmarkFactory.h  Cost.h  LlvmSession.h  Observation.h  ObservationSpaces.h
native/include/compiler_gym/service/: BenchmarkCache.h  CompilationSession.h  CompilerGymService.h  CompilerGymServiceImpl.h  CreateAndRunCompilerGymServiceImpl.h  Proto.h  Runtime.h
native/include/compiler_gym/util/: Subprocess.h
native/include/labm8/: common.h  logging.h  macros.h  port.h  status.h  status_macros.h  statusor.h  stringpiece.h
native/include/programl/graph/: features.h  program_graph_builder.h
native/include/programl/graph/format/: cdfg.h  graph_serializer.h  graph_tuple.h  graphviz_converter.h  node_link_graph.h
native/include/programl/ir/llvm/: clang.h  llvm.h
native/include/programl/ir/llvm/internal/: program_graph_builder.h  program_graph_builder_pass.h  text_encoder.h
native/labm8/: CMakeLists.txt  logging.cc  status.cc  statusor.cc  string.cc  stringpiece.cc
native/lib/: CMakeLists.txt  Version.h.in
native/lib/proto/: compiler_gym_service.proto
native/lib/service/: BenchmarkCache.cc  CMakeLists.txt  CreateAndRunCompilerGymServiceImpl.cc  Proto.cc
native/lib/util/: CMakeLists.txt
native/llvm/: ActionSpace.cc  Autophase.cc  Benchmark.cc  BenchmarkDynamicConfig.cc  BenchmarkFactory.cc  CMakeLists.txt  Cost.cc  InstCount.cc  LlvmSession.cc  Observation.cc  ObservationSpaces.cc  RunService.cc  StripOptNoneAttribute.cc
native/llvm/lex/: CMakeLists.txt  LLLexer.cc  llvm_lexer_token_info.cc
native/miniapp/: CMakeLists.txt  app.proto  main.cc
native/programl/: CMakeLists.txt
native/programl/graph/: program_graph_builder.cc
native/programl/graph/analysis/: analysis.h  data_flow_pass.cc  data_flow_pass.h  datadep.cc  datadep.h  dominance.cc  dominance.h  liveness.cc  liveness.h  reachability.cc  reachability.h  subexpressions.cc  subexpressions.h
native/programl/graph/format/: cdfg.cc  graph_serializer.cc  graphviz_converter.cc  node_link_graph.cc
native/programl/ir/llvm/: clang.cc  llvm.cc
native/programl/ir/llvm/internal/: program_graph_builder.cc  text_encoder.cc
native/programl/ir/xla/: hlo_module_graph_builder.cc  hlo_module_graph_builder.h  hlo_proto_reader.cc  hlo_proto_reader.h  xla_stringifier.h
native/programl/util/: filesystem_cache.cc  filesystem_cache.h  stdin_fmt.h  stdout_fmt.h
packaging/: hot_swap_llvm_binaries.sh
tests/: validate_test.py
tests/gcc/: gcc_bin_test.py  gcc_docker_test.py  gcc_env_test.py
tests/llvm/: custom_benchmarks_test.py  observation_spaces_test.py  validate_test.py
tests/llvm/service/: ActionSpaceTest.cc  GvnSinkTest.cc
tests/service/proto/: py_converters_test.py
tests/service/runtime/: BenchmarkCacheTest.cc
tutorial/: cgo22.html  example_service.html  reinforcement_learning.html
(+1 files in other folders)
